data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2265.wast
;; 6. **Test Description**: Design a block that uses `valtype?`, performing stack-manipulating instructions before applying `br_if` with a condition.    - **Constraint Checked**: Checks the stacking logic and correctness of `br_if`'s condition branch.    - **Relation to Condition Evaluation**: Errors in stack manipulation or misinterpreted conditions may cause incorrect branching.

(assert_invalid
  (module (func $valtype_stack_manipulation_br_if
    (block (result i32) 
      (i32.const 0) 
      (i32.const 1) 
      (i32.add) 
      (br_if 0 (i32.eqz (i32.const 0)))
      (i32.const 2)
    )
  ))
  "type mismatch"
)